fix: header, footer showing white space on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,11 @@ body {
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header,
+  footer,nav {
+    width: 100%;
+  }
+
 nav {
   background-color: var(--nav-bg);
   padding: 10px;
@@ -217,21 +222,37 @@ footer a:hover {
 
 @media (max-width: 600px) {
 
+
   button {
     font-size: 18px;
+  }
+
+
+  .homeImage {
+  max-width: 220px;
+  height: auto;
+  }
+
+
+  #content {
+    width: 100%;      
+    max-width: 300px; 
+    padding: 1rem;
+    margin: 0 auto;
   }
 
   .home-card,
   .menu-card,
   .contact-card {
-    width: 350px;
+    width: 100%; 
   }
 
   .headingText {
     font-size: 35px;
   }
 
-  .aboutText,.detailText {
+  .aboutText,
+  .detailText {
     font-size: 16px;
     text-align: center;
   }
@@ -241,15 +262,19 @@ footer a:hover {
     flex-direction: column;
   }
 
-  .category-name,.intro-line {
+  .category-name,
+  .intro-line {
     font-size: 20px;
   }
 
-  .item-name,.item-price,.contact-label,.contact-value{
+  .item-name,
+  .item-price,
+  .contact-label,
+  .contact-value {
     font-size: 16px;
   }
 
-  .item-desc{
+  .item-desc {
     font-size: 14px;
     width: 60%;
   }
